--- a/fuzzy-script/FuzzyCardGenerator.ipynb
+++ b/fuzzy-script/FuzzyCardGenerator.ipynb
@@ -146,9 +146,9 @@
     "# PM25 ->   0 – 5   | 5 – 15    | > 15\n",
     "# PM10 ->   0 – 10  | 10 – 20   | > 20\n",
     "# NO2  ->   0 - 10  | 10 - 30   | > 30\n",
-    "# Ozon ->   0 – 100 | 100 – 160 | > 160\n",
+    "# Ozon ->   0 – 100 | 100 – 160 | > 160 --> TODO\n",
     "# Russ ->   0 – 1   | 1 – 1.7   | > 1.7\n",
-    "# Laerm ->  < 50    | 50 – 60   | > 60\n",
+    "# Laerm ->  < 50    | 50 – 60   | > 60 --> TODO\n",
     "\n",
     "max = 1\n",
     "quality_per_layer = {\n",
