--- a/fuzzy-script/test.ipynb
+++ b/fuzzy-script/test.ipynb
@@ -463,8 +463,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-15T10:23:54.366088Z",
-     "start_time": "2025-11-15T10:23:54.242971Z"
+     "end_time": "2025-11-15T12:07:43.013547Z",
+     "start_time": "2025-11-15T12:07:42.174703Z"
     }
    },
    "cell_type": "code",
@@ -498,7 +498,23 @@
     "plt.ylabel(\"Membership Degree\")\n",
     "plt.grid(True, alpha=0.3)\n",
     "plt.legend()\n",
-    "plt.show()\n"
+    "plt.show()\n",
+    "\n",
+    "import requests\n",
+    "\n",
+    "url = \"https://opendata.zh.ch/dataset/6ee66f13-0973-4f3d-b241-694c6db2a6d5/resource/e1796a58-ff23-442c-8936-7271e7dd32d4/download/mp98-jahre-2023.tif\"\n",
+    "out = \"mp98-jahre-2023.tif\"\n",
+    "\n",
+    "r = requests.get(url)\n",
+    "r.raise_for_status()\n",
+    "\n",
+    "with open(out, \"wb\") as f:\n",
+    "    f.write(r.content)\n",
+    "\n",
+    "print(\"Downloaded:\", out)\n",
+    "\n",
+    "\n",
+    "\n"
    ],
    "id": "1f2615ac14d33cba",
    "outputs": [
@@ -514,9 +530,190 @@
      "jetTransient": {
       "display_id": null
      }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded: mp98-jahre-2023.tif\n"
+     ]
     }
    ],
-   "execution_count": 13
+   "execution_count": 19
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T09:34:50.233044Z",
+     "start_time": "2025-11-16T09:34:49.463678Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "from rasterio.transform import from_bounds\n",
+    "\n",
+    "# WMS parameters\n",
+    "wms_url = \"https://wms.zh.ch/AwelLHMP98JahreZHWMS\"\n",
+    "layer_name = \"mp98-jahre-2023\"\n",
+    "\n",
+    "# Output\n",
+    "output_tif = \"ozon.tif\"\n",
+    "\n",
+    "# Image size\n",
+    "width = 2383\n",
+    "height = 2974\n",
+    "\n",
+    "# Full bounding box (EPSG:2056) from GetCapabilities\n",
+    "minx = 2654500\n",
+    "miny = 1222400\n",
+    "maxx = 2720000\n",
+    "maxy = 1300000\n",
+    "\n",
+    "# WMS request\n",
+    "params = {\n",
+    "    \"SERVICE\": \"WMS\",\n",
+    "    \"VERSION\": \"1.3.0\",\n",
+    "    \"REQUEST\": \"GetMap\",\n",
+    "    \"LAYERS\": layer_name,\n",
+    "    \"CRS\": \"EPSG:2056\",\n",
+    "    \"BBOX\": f\"{minx},{miny},{maxx},{maxy}\",\n",
+    "    \"WIDTH\": width,\n",
+    "    \"HEIGHT\": height,\n",
+    "    \"FORMAT\": \"image/png; mode=8bit\"\n",
+    "}\n",
+    "\n",
+    "r = requests.get(wms_url, params=params)\n",
+    "r.raise_for_status()\n",
+    "\n",
+    "# Convert to numpy array\n",
+    "img = Image.open(BytesIO(r.content)).convert(\"L\")\n",
+    "img.save(\"ozon.png\")\n",
+    "arr = np.array(img).astype(\"float32\")\n",
+    "arr[arr == 255] = 0\n",
+    "\n",
+    "# GeoTIFF transform\n",
+    "transform = from_bounds(minx, miny, maxx, maxy, width, height)\n",
+    "\n",
+    "# Save GeoTIFF\n",
+    "with rasterio.open(\n",
+    "    output_tif,\n",
+    "    \"w\",\n",
+    "    driver=\"GTiff\",\n",
+    "    height=height,\n",
+    "    width=width,\n",
+    "    count=1,\n",
+    "    dtype=arr.dtype,\n",
+    "    crs=\"EPSG:2056\",\n",
+    "    transform=transform,\n",
+    ") as dst:\n",
+    "    dst.write(arr, 1)\n",
+    "\n",
+    "print(\"Saved:\", output_tif)\n"
+   ],
+   "id": "942fa989ab22df99",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: ozon.tif\n"
+     ]
+    }
+   ],
+   "execution_count": 11
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-16T09:45:32.921427Z",
+     "start_time": "2025-11-16T09:45:32.090151Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import requests\n",
+    "from io import BytesIO\n",
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import rasterio\n",
+    "from rasterio.transform import from_bounds\n",
+    "\n",
+    "# WMS parameters\n",
+    "wms_url = \"https://wms.geo.admin.ch/\"\n",
+    "layer_name = \"ch.bafu.laerm-strassenlaerm_tag\"\n",
+    "\n",
+    "# Output\n",
+    "output_tif = \"laerm.tif\"\n",
+    "\n",
+    "# Image size\n",
+    "width = 2383\n",
+    "height = 2974\n",
+    "\n",
+    "# Full bounding box for Zurich (EPSG:2056)\n",
+    "minx = 2654500\n",
+    "miny = 1222400\n",
+    "maxx = 2720000\n",
+    "maxy = 1300000\n",
+    "\n",
+    "# WMS request parameters\n",
+    "params = {\n",
+    "    \"SERVICE\": \"WMS\",\n",
+    "    \"VERSION\": \"1.3.0\",\n",
+    "    \"REQUEST\": \"GetMap\",\n",
+    "    \"LAYERS\": layer_name,\n",
+    "    \"CRS\": \"EPSG:2056\",\n",
+    "    \"BBOX\": f\"{minx},{miny},{maxx},{maxy}\",\n",
+    "    \"WIDTH\": width,\n",
+    "    \"HEIGHT\": height,\n",
+    "    \"FORMAT\": \"image/png\",\n",
+    "    \"TRANSPARENT\": \"false\"\n",
+    "}\n",
+    "\n",
+    "# Fetch the image\n",
+    "r = requests.get(wms_url, params=params)\n",
+    "r.raise_for_status()\n",
+    "\n",
+    "# Convert to numpy array\n",
+    "img = Image.open(BytesIO(r.content)).convert(\"L\")\n",
+    "img.save(\"laerm.png\")  # optional: save PNG preview\n",
+    "arr = np.array(img).astype(\"float32\")\n",
+    "arr = np.nan_to_num(arr, nan=0)  # replace any NaNs with 0\n",
+    "\n",
+    "# GeoTIFF transform\n",
+    "transform = from_bounds(minx, miny, maxx, maxy, width, height)\n",
+    "\n",
+    "# Save GeoTIFF\n",
+    "with rasterio.open(\n",
+    "    output_tif,\n",
+    "    \"w\",\n",
+    "    driver=\"GTiff\",\n",
+    "    height=height,\n",
+    "    width=width,\n",
+    "    count=1,\n",
+    "    dtype=arr.dtype,\n",
+    "    crs=\"EPSG:2056\",\n",
+    "    transform=transform,\n",
+    ") as dst:\n",
+    "    dst.write(arr, 1)\n",
+    "\n",
+    "print(\"Saved:\", output_tif)\n"
+   ],
+   "id": "e1eb41126620fefd",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: laerm.tif\n"
+     ]
+    }
+   ],
+   "execution_count": 14
   }
  ],
  "metadata": {
