Final SEP Integration

--- a/fuzzy-script/SEPCreator.ipynb
+++ b/fuzzy-script/SEPCreator.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2025-11-16T16:29:25.738639Z",
-     "start_time": "2025-11-16T16:28:54.290396Z"
+     "end_time": "2025-12-06T08:44:21.918162Z",
+     "start_time": "2025-12-06T08:43:58.726548Z"
     }
    },
    "source": [
@@ -16,10 +16,9 @@
     "import rasterio\n",
     "from rasterio.transform import from_origin\n",
     "\n",
-    "# TODO: Add your CSV file path here\n",
-    "csv_file = r\"todo\"\n",
+    "csv_file = r\"C:\\Users\\Jan\\OneDrive\\Uni\\3. Semester\\Seminar Urban Computing\\ssep_open.csv\"\n",
     "value_column = \"ssep1\"\n",
-    "output_tif = \"ssep.tif\"\n",
+    "output_tif = \"../geoserver_data/data/ssep.tif\"\n",
     "resolution = 100\n",
     "\n",
     "df = pd.read_csv(csv_file)\n",
@@ -64,7 +63,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GeoTIFF gespeichert: ssep1_output.tif\n"
+      "GeoTIFF saved: ssep.tif\n"
      ]
     }
    ],
