--- a/fuzzy-script/ssep_quality_combiner.ipynb
+++ b/fuzzy-script/ssep_quality_combiner.ipynb
@@ -90,7 +90,14 @@
     "        ssep_mean = np.nanmean(valid_ssep)\n",
     "        quality_mean = np.mean(valid_quality)\n",
     "\n",
-    "        score = (100 - ssep_mean)/100 * (quality_mean - quality_min)/(quality_max - quality_min)\n",
+    "        # Normalize inputs to 0-1\n",
+    "        ssep_norm = (ssep_mean - 0) / (100 - 0)\n",
+    "        quality_norm = (quality_mean - quality_min) / (quality_max - quality_min)\n",
+    "\n",
+    "        # Absolute difference = mismatch score\n",
+    "        score = abs(ssep_norm - quality_norm)\n",
+    "\n",
+    "        # Scale to 0–100\n",
     "        output[i,j] = np.clip(score * 100, 0, 100)\n",
     "\n",
     "plt.imshow(output, cmap='viridis')\n",
